<resources>
    <string name="search_assets_hint">Search assets</string>
    <string name="search_items_hint">Search items</string>
    <string name="search_skills_hint">Search skills</string>
    <string name="add">Add</string>
    <string name="blank"></string>
    <string name="bug">There is a bug here!</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="imports">Import</string>
    <string name="help">Help</string>
    <string name="select">Select</string>
    <string name="reload">Reload</string>
    <string name="remove">Remove</string>
    <string name="untitled">Untitled</string>
    <string name="NA">N/A</string>
    <string name="activity_about_title">About Evanova</string>
    <string name="activity_char_skills_title">Skills</string>
    <string name="activity_char_assets_title">Assets</string>
    <string name="activity_char_market_title">Market orders</string>
    <string name="activity_char_wallet_title">Wallet</string>
    <string name="activity_char_mail_title">Eve Mail</string>
    <string name="activity_char_training_title">Training queue</string>
    <string name="activity_char_summary_title">Capsuleer</string>
    <string name="activity_char_attributes_title">Attributes</string>
    <string name="activity_char_clones_title">Clones</string>
    <string name="activity_contract_title">Contracts</string>
    <string name="activity_corp_title">Corporation</string>
    <string name="activity_corp_assets_title">Corporation assets</string>
    <string name="activity_items_title">Items Database</string>
    <string name="activity_market_title">Eve Market</string>
    <string name="activity_keys_title">Accounts</string>
    <string name="activity_keys_title_none">Use the menu to import accounts.</string>
    <string name="activity_keys_inactive_one">One inactive key.</string>
    <string name="activity_keys_inactive_many">%1$d inactive keys.</string>
    <string name="activity_keys_active_one">one active key.</string>
    <string name="activity_keys_active_many">%1$d active keys.</string>
    <string name="activity_keys_active_inactive">%1$d/%2$d active keys.</string>
    <string name="activity_launcher_text_loading">Docking permission requested</string>
    <string name="activity_launcher_text_init">Loading Evanova&#8230;</string>
    <string name="activity_launcher_error_title">The front fell off!</string>
    <string name="activity_launcher_error_text">Obviously, an error has occurred with Evanova.\n\n
        Your device may not have enough storage space, or something went wrong during initialization.\n
        Evanova requires a little more than 20Mb so please check that your device has enough space for the evanovaApplication to run properly.
        If your device allows it, please consider moving Evanova to the SD card.\n\n
        Also, you can try flushing Evanova\'s data from your device settings (Manage Apps > All > Evanova > Clear Data) or try re-installing the evanovaApplication.\n
        However, other weird things can occur too!\n\n                
        If you choose to disregard this error, Evanova may run with possibly limited functionalities 
        and unexpected behaviour (your mileage may vary).\n
        Please consider reporting this error by e-mail, which helps the developer provide better support 
        for your device. If you choose to do so (thank you!), you will be able to verify the information being sent 
        beforehand. No personally identifiable or other sensitive information will be transmitted.</string>
    <string name="activity_launcher_text_backup_database">Backing up databases.</string>
    <string name="activity_launcher_text_check_database">Checking memory cells.</string>
    <string name="activity_launcher_text_update_database">Upgrading memory cells.</string>
    <string name="activity_launcher_text_check_keys">Checking Capsuleers sanity.</string>
    <string name="activity_launcher_text_loaded">Docking request accepted.</string>
    <string name="activity_mailboxes">Mailbox</string>
    <string name="activity_notifications">Notifications</string>
    <string name="activity_mailbox">Mailbox</string>
    <string name="activity_mail">Message</string>
    <string name="activity_routes.title">Routes</string>
    <string name="activity_routes.input">Route</string>
    <string name="activity_routes.saved">Saved</string>
    <string name="activity_routes.description">Data from dotlan.net - last 3h</string>
    <string name="activity_routes.error">Unable to get route</string>
    <string name="activity_server_status_title">Server Status</string>
    <string name="activity_server_status_subtitle">Rhea</string>
    <string name="activity_server_status_name">Tranquility</string>
    <string name="activity_server_status_time">%1$s</string>
    <string name="activity_server_status_online">Server is Online</string>
    <string name="activity_server_status_offline">Server is Offline</string>
    <string name="activity_server_status_players">%1$s players online.</string>
    <string name="activity_server_status_unknown">Server status unknown</string>
    <string name="activity_server_status_updated">Server status updated.</string>
    <string name="activity_server_status_motd_label">Eve Online News</string>
    <string name="activity_server_status_updatetime">Updated %1$s ago</string>
    <string name="activity_certificates_title">Certificates</string>
    <string name="activity_skills_library_title">Skill Library</string>
    <string name="activity_skills_title">Skills</string>
    <string name="activity_training_title">Skill Training</string>
    <string name="activity_test_title">Hidden Testing</string>
    <string name="button_characters">Characters</string>
    <string name="button_corporations">Corporations</string>
    <string name="button_fittings">Fittings</string>
    <string name="button_skills">Skills</string>
    <string name="button_items">Items</string>
    <string name="button_market">Market</string>
    <string name="button_routes">Routes</string>
    <string name="button_server">Server</string>
    <string name="button_api">Accounts</string>
    <string name="button_assets">Assets</string>
    <string name="button_messages">Mails</string>
    <string name="button_social">People</string>
    <string name="button_calendar">Calendar</string>
    <string name="button_wallet">Wallet</string>
    <string name="button_orders">Orders</string>
    <string name="button_contracts">Contracts</string>
    <string name="button_industry">Industry</string>
    <string name="button_corporation">Corporation</string>
    <string name="button_starbases">Starbases</string>
    <string name="dialog_delete_key_title">Delete account</string>
    <string name="dialog_delete_key_text">Pilots and Corporations associated with this key will also be deleted.</string>
    <string name="dialog_mailbox_selected_delete_title">Delete messages</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_accounts_add_text_file">Text File</string>
    <string name="menu_accounts_add_evemon_file">EveMon</string>
    <string name="menu_accounts_add_eve_keys">Eve API Keys</string>
    <string name="menu_accounts_add_eve_sso">Eve SSO</string>
    <string name="menu_accounts_delete">Delete</string>
    <string name="menu_fitting_add">Add</string>
    <string name="menu_fitting_rename">Rename</string>
    <string name="menu_fitting_import">Import</string>
    <string name="menu_fitting_delete">Delete</string>
    <string name="preferences_cachedialog_title">Clear caches</string>
    <string name="preferences_cachedialog_message">This will clear all cached data from your device. New data will be fetched when Evanova requires it.</string>
    <string name="preferences_caching_spare_title">Don\'t use mobile networks</string>
    <string name="preferences_category_display">Display</string>
    <string name="preferences_category_notifications">Notifications</string>
    <string name="preferences_screen_notifications">Notifications options</string>
    <string name="preferences_screen_notifications_summary">Select which notifications to display. These settings will override individual settings.</string>
    <string name="preferences_notifications_account_status_title">Account Status</string>
    <string name="preferences_notifications_account_status_summary">EVE Account subscription expiring within 48h.</string>
    <string name="preferences_notifications_account_training_title">Account Training</string>
    <string name="preferences_notifications_account_training_summary">EVE Account with no training in progress.</string>
    <string name="preferences_notifications_training_title">Capsuleer Training</string>
    <string name="preferences_notifications_training_summary">Training queue expiring within 24h.</string>
    <string name="preferences_notifications_mail_title">EVE Mail</string>
    <string name="preferences_notifications_mail_summary">New EVE mail messages.</string>
    <string name="preferences_notifications_notifications_title">EVE Messages</string>
    <string name="preferences_notifications_notifications_summary">New EVE notification messages.</string>
    <string name="preferences_notifications_calendar_title">Calendar</string>
    <string name="preferences_notifications_calendar_summary">Calendar events happening within 24h.</string>
    <string name="preferences_notifications_contracts_title">Contract</string>
    <string name="preferences_notifications_contracts_summary">Contracts expiring within 24h.</string>
    <string name="preferences_category_network">Network settings</string>
    <string name="preferences_api_check_title">Override built-in settings</string>
    <string name="preferences_api_check_summary">Change URLs used to retrieve data at your own risk.</string>
    <string name="preferences_apiurl_title">Eve Online API</string>
    <string name="preferences_apiurl_summary">Usually \'https://api.eveonline.com\'.</string>
    <string name="preferences_evecentral_title">Eve Central</string>
    <string name="preferences_evecentral_summary">Usually \'http://api.eve-central.com\'.</string>
    <string name="preferences_imagesurl_behaviour">Eve Online Images</string>
    <string name="preferences_imagesurl_behaviour_summary">Usually \'https://image.eveonline.com\'.</string>
    <string name="preferences_category_online">EVE Online Data</string>
    <string name="preferences_update_frequency_summary"></string>
    <string name="preferences_update_frequency_title">Update frequency</string>
    <string name="preferences_notification_title">Enable Notifications</string>
    <string name="preferences_notification_title_summary">Unchecking this option will disable all notifications and override individual settings.</string>
    <string name="preferences_notification_ringtone_title">Notifications sound</string>
    <string name="preferences_status_behaviour_title">Eve Online Server</string>
    <string name="preferences_statusurl_behaviour_summary">Usually \'http://client.eveonline.com\'.</string>
    <string name="preferences_background_behaviour">Application background</string>
    <string name="preferences_background_behaviour_summary">This option is applicable on some screens only and requires restarting Evanova.</string>
    <string name="preferences_background_behaviour_dialog">Select…</string>
    <string name="preferences_display_behaviour">Main screen</string>
    <string name="preferences_display_behaviour_summary">This option allows you to change what is displayed on the main Character or Corporation screen</string>
    <string name="preferences_display_behaviour_dialog">Select…</string>
</resources>