<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_fitting_add"
        android:icon="@mipmap/ic_action_new"
        android:title="@string/menu_fitting_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_fitting_delete"
        android:icon="@mipmap/ic_action_discard"
        android:title="@string/menu_fitting_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_fitting_rename"
        android:title="@string/menu_fitting_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_fitting_import"
        android:title="@string/menu_fitting_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_fitting_share"
        android:title="Share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never" />


</menu>